AUTOMAKE_OPTIONS = subdir-objects

bin_PROGRAMS = scanpf

scanpf_SOURCES = src/scanpf.cpp #src/utility.cpp  src/utility.h
	
#	ConvertUTF/ConvertUTF.c ConvertUTF/ConvertUTF.h

#sdkdir = $(pkgincludedir)
#sdk_HEADERS = deadbeef.h

#scanpf_LDADD = $(LDADD) $(DEPS_LIBS) $(ICONV_LIB) $(DL_LIBS) -lm -lpthread $(INTL_LIBS) plugins/libparser/libparser.a
# scanpf_LDADD = $(LDADD) $(DEPS_LIBS) $(ICONV_LIB) $(DL_LIBS)


# AM_CFLAGS = $(DEPS_CFLAGS) -std=c99 -DLOCALEDIR=\"@localedir@\"
# AM_CPPFLAGS = $(DEPS_CFLAGS)

# docsdir = $(docdir)

# docs_DATA = README ChangeLog

#desktopdir = $(datadir)/applications
#desktop_DATA = scanpf.desktop

ACLOCAL_AMFLAGS = -I m4
