#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([scanpf], [0.0.1], [])
AC_CONFIG_SRCDIR([src/scanpf.cpp])
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])

AC_PROG_CXX

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
