## Process this file with automake to produce Makefile.in 

AUTOMAKE_OPTIONS = subdir-objects
ACLOCAL_AMFLAGS = $(ACLOCAL_FLAGS)

#bin_PROGRAMS = src/rx
#aclocalrx_SOURCES = main.cpp rx.cpp

#rx_LDADD = libHelloWorld.la

#lib_LTLIBRARIES = libHelloWorld.la
libHelloWorld_la_LDFLAGS = -version-info 0:0:0
#libHelloWorld_la_SOURCES = helloWorld.cpp helloWorld.h
